# orca-registry

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.debug  README.md  config-example.toml  manifest.json  rust-toolchain.toml  shell.nix
crates/orca_api/: Cargo.toml
crates/orca_api/migrations/postgres/: 20251204012328_initial.sql
crates/orca_api/migrations/sqlite/: 20251204004242_initial.sql
crates/orca_api/src/: app_state.rs  config.rs  error.rs  main.rs  query.rs
crates/orca_api/src/api/: auth.rs  mod.rs
crates/orca_api/src/api/oci/: auth.rs  blobs.rs  catalog.rs  manifests.rs  mod.rs  referrers.rs  tags.rs  uploads.rs
crates/orca_api/src/api/orca/: mod.rs
crates/orca_api/src/auth/: ldap_driver.rs  mod.rs  static_driver.rs
crates/orca_api/src/database/: mod.rs  postgres.rs  sqlite.rs
crates/orca_api/src/database/schemas/: schema.sql
crates/orca_api/src/dto/: digest.rs  manifest.rs  mod.rs  scope.rs  user.rs
crates/orca_api/src/storage/: filesystem.rs  mod.rs
crates/orca_web/: Cargo.toml  index.html  tailwind.config.js
crates/orca_web/src/: main.rs
crates/orca_web/src/pages/: login.rs
dev-sql/: create_user.sql
docs/: database.md  todo.md
docs/storage-providers/: filesystem-provider.md
src/: app_state.rs  auth_storage.rs  byte_stream.rs  config.rs  main.rs  schema.rs
src/api/: auth.rs  blobs.rs  catalog.rs  manifests.rs  mod.rs  tags.rs  uploads.rs
src/auth/: ldap_driver.rs  mod.rs
src/database/: mod.rs  sqlite.rs
src/database/schemas/: schema.sql
src/dto/: digest.rs  mod.rs  scope.rs  user.rs
src/storage/: filesystem.rs  mod.rs
