[package]
name = "docker-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "tracing-log" ] }
tracing-log = "0.1.3"

uuid = { version = "1.3.1", features = [ "v4", "fast-rng" ] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "sqlite" ] }

bytes = "1.4.0"

chrono = "0.4.23"
tokio = { version = "1.21.2", features = [ "fs", "macros" ] }
tokio-util =  { version = "0.7.7", features = [ "io" ] }

clap = { version = "4.0.23", features = [ "derive" ] }

serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.87"

regex = "1.7.1"

jws = "0.2.7"
async-trait = "0.1.68"
futures = "0.3.28"
sha256 = "1.1.2"
pin-project-lite = "0.2.9"
anyhow = "1.0.70"
async-stream = "0.3.5"
axum = "0.6.16"
axum-macros = "0.3.7"

tower-http = { version = "0.4.0", features = [ "trace", "normalize-path" ] }
tower-layer = { version = "0.3.2" }
