[package]
name = "orca-api"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "tracing-log", "json", "env-filter" ] }
tracing-log = "0.2"
tracing-appender = "0.2"

uuid = { version = "1", features = [ "v4", "fast-rng" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite" ] }

bytes = "1.4"
chrono = { version = "0.4", features = [ "serde" ] }
tokio = { version = "1.0", features = [ "fs", "macros", "rt-multi-thread" ] }
tokio-util =  { version = "0.7", features = [ "io" ] }

clap = { version = "4.0", features = [ "derive" ] }

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

regex = "1.0"

jws = "0.2"
async-trait = "0.1"
futures = "0.3"
sha256 = "1.0"
pin-project-lite = "0.2"
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8.3", features = [ "macros" ] }
#axum-server = { version = "0.7.2", features = [ "tls-rustls" ] }

tower-http = { version = "0.6", features = [ "trace", "normalize-path", "limit" ] }
tower-layer = { version = "0.3" }

figment = { version = "0.10", features = ["toml", "env"] }
figment-cliarg-provider = { git = "https://github.com/SeanOMik/figment-cliarg-provider.git", branch = "main" }
wild = "2.2"
argmap = "1.1.2"
serde_qs = "0.15"
qstring = "0.7.2"
jwt = "0.16"
hmac = "0.12.1"
sha2 = "0.10"
rand = "0.9"
bcrypt = ">=0.14.0,<1.0"
bitflags = "2.0"
ldap3 = ">=0.11.0,<1.0"
lazy_static = "1.0"
hyper = { version = "1", features = ["http1", "http2", "server"] }
thiserror = "2"
tower = "0.5.2"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
hyper-util = { version = "0.1", features = ["server-auto"] }
base64 = "0.22.1"
