[package]
name = "orca_web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr", "nightly", "tracing"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
thaw = { version = "0.3.3", features = ["csr"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"